[package]
name = "iwls"
version = "0.0.2"
authors = ["Alexander Lopatin <github.com/alopatindev>"]
description = "Shows available Wi-Fi access points and suggests the best channel to use"
repository = "https://github.com/alopatindev/iwls"
license = "MIT"

[lib]
name = "iwls"
path = "src/lib.rs"
doctest = false

[dependencies]
clap = ">=2.13.0"
clippy = {version = "0.0.114", optional = true}
nalgebra = ">=0.8.2"
order-stat = ">=0.1.3"
users = ">=0.5.2"
wifiscanner = ">=0.3.3"

[features]
default = []
