[package]
name = "iwls"
version = "0.0.3"
authors = ["Alexander Lopatin <github.com/alopatindev>"]
description = "Shows available Wi-Fi access points and suggests the best channel to use"
repository = "https://github.com/alopatindev/iwls"
license = "MIT"

[lib]
name = "iwls"
path = "src/lib.rs"
doctest = false

[dependencies]
clap = "2.33"
nalgebra = "0.20"
order-stat = "0.1"
users = "0.9"
wifiscanner = "0.5"

[features]
default = []
